Fix UICollectionViewCell uncaught exception causing crash

--- a/Prep/Prep/Storyboard/Base.lproj/Main.storyboard
+++ b/Prep/Prep/Storyboard/Base.lproj/Main.storyboard
@@ -175,7 +175,6 @@
                         <outlet property="addButton" destination="aZh-ou-EQ8" id="M77-Av-mTy"/>
                         <outlet property="collectionView" destination="NcZ-cG-YgM" id="JMr-xl-QqM"/>
                         <segue destination="4Bf-up-AFb" kind="show" identifier="HomePageToEditorStartPage" id="ytS-St-Bpf"/>
-                        <segue destination="vZQ-fK-1s5" kind="show" identifier="HomePageToSharedExperiences" id="AeF-wR-YHP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ecM-dE-1hq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -278,7 +277,6 @@
                     </tableView>
                     <connections>
                         <outlet property="controlSwitch" destination="39l-eg-cm8" id="Ual-iG-X2p"/>
-                        <segue destination="gDe-7I-zhs" kind="show" identifier="SignOutSegue" id="1S4-84-iuN"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H3F-9q-gDJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -401,7 +399,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="caY-pg-Wve">
-                                <rect key="frame" x="0.0" y="70" width="1024" height="584"/>
+                                <rect key="frame" x="0.0" y="114" width="1024" height="540"/>
                                 <subviews>
                                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="preplogo" translatesAutoresizingMaskIntoConstraints="NO" id="blF-VU-bXf">
                                         <rect key="frame" x="212" y="-180" width="600" height="180"/>
@@ -411,10 +409,10 @@
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="preplogo" translatesAutoresizingMaskIntoConstraints="NO" id="GOI-tL-hda">
-                                        <rect key="frame" x="187" y="0.0" width="650" height="184"/>
+                                        <rect key="frame" x="187" y="0.0" width="650" height="140"/>
                                     </imageView>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="PXS-Et-yuQ">
-                                        <rect key="frame" x="211.5" y="234" width="601" height="51"/>
+                                        <rect key="frame" x="211.5" y="190" width="601" height="51"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="UUD-9h-tE4"/>
                                         </constraints>
@@ -428,7 +426,7 @@
                                         </connections>
                                     </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Nza-Zx-kJ2">
-                                        <rect key="frame" x="212" y="334" width="600" height="50"/>
+                                        <rect key="frame" x="212" y="290" width="600" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CvN-PB-OiH">
                                                 <rect key="frame" x="0.0" y="0.0" width="42.5" height="50"/>
@@ -449,7 +447,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="TEB-Nc-Yr2">
-                                        <rect key="frame" x="212" y="434" width="600" height="50"/>
+                                        <rect key="frame" x="212" y="390" width="600" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9w8-l6-AeZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="77" height="50"/>
@@ -470,7 +468,7 @@
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDY-63-fAA">
-                                        <rect key="frame" x="212" y="534" width="600" height="50"/>
+                                        <rect key="frame" x="212" y="490" width="600" height="50"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                         <constraints>
@@ -492,7 +490,6 @@
                             <constraint firstItem="gMk-B2-FNs" firstAttribute="bottom" secondItem="caY-pg-Wve" secondAttribute="bottom" constant="114" id="Ecb-ax-VVV"/>
                             <constraint firstItem="caY-pg-Wve" firstAttribute="trailing" secondItem="gMk-B2-FNs" secondAttribute="trailing" id="OQM-Dr-Lxk"/>
                             <constraint firstItem="caY-pg-Wve" firstAttribute="leading" secondItem="gMk-B2-FNs" secondAttribute="leading" id="jPk-YF-Ltt"/>
-                            <constraint firstItem="caY-pg-Wve" firstAttribute="top" secondItem="hdS-64-CI0" secondAttribute="top" constant="114" id="ojb-KB-tCM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gMk-B2-FNs"/>
                     </view>
@@ -503,7 +500,7 @@
                         <outlet property="PrepLogo" destination="blF-VU-bXf" id="ji9-IX-BGX"/>
                         <outlet property="SignInButton" destination="nDY-63-fAA" id="Dyg-c2-Q9K"/>
                         <outlet property="SignInSelection" destination="PXS-Et-yuQ" id="F6u-My-V19"/>
-                        <segue destination="vZQ-fK-1s5" kind="show" identifier="GoToHomePage" id="iRM-Rq-Ywr"/>
+                        <segue destination="vZQ-fK-1s5" kind="show" identifier="LoginToSharedExperience" id="iRM-Rq-Ywr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qay-OL-Vem" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -529,7 +526,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="J1K-l0-kXb" customClass="Cell" customModule="Prep" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="J1K-l0-kXb" customClass="ScalingCarouselCell" customModule="ScalingCarousel">
                                         <rect key="frame" x="0.0" y="0.0" width="330" height="495"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -593,7 +590,7 @@
                                     <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="ILP-Ib-Gy2" kind="show" id="cCc-vB-9d0"/>
+                                    <segue destination="ILP-Ib-Gy2" kind="show" identifier="SharedExperienceToHomePage" id="cCc-vB-9d0"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -617,9 +614,7 @@
         <image name="preplogo" width="650" height="883"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="AeF-wR-YHP"/>
-        <segue reference="1S4-84-iuN"/>
         <segue reference="cCc-vB-9d0"/>
-        <segue reference="EA6-sL-iS9"/>
+        <segue reference="Izw-f1-Gyb"/>
     </inferredMetricsTieBreakers>
 </document>
